updating for patch / genre encoding exploration

--- a/Flask_notebooks/User_Table_DB_Updates.ipynb
+++ b/Flask_notebooks/User_Table_DB_Updates.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +39,7 @@
        "module"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -59,7 +59,7 @@
        "<module 'SD_mod' from '/Users/user/Documents/GitHub/Lambda/labs/Music-Meteorologist-ds/Flask_notebooks/SD_mod.py'>"
       ]
      },
-     "execution_count": 106,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,16 +111,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'BQBaQvt5nNhCaeC1HNqY-F-8Uox2zkB0DgsavJm-GbUkQKtkMF8uGIIKEkvRieyvibr49zzeib6M7k_Bij7inUi2Q5PltuX60y6hO7hL7sUL1KbcjAZQfGXih6MMwV0lsg1FMf2Bi_OMEV9ON59P-jvmz0kM4DRGJdd1dztZaSrpQVr_Rk6k8xWq9uDUqWAgHANHuPU9TA'"
+       "'BQD1ONV_O9THa5Ttk2-uHDKsAzD10jj8njwvxkt2i1P0igqwiFhpMfUbLtAzC9KO0ORCIuhDMrM8Z5apAW6Hq_LB3R-HA9lUdYPWMAd04bQWCMm2YHBIxo30_8_7v7f47V9hvVPgiuuHcTNvjqZ_NopNSfVeETOBpcvYkVZnWMNa5C5Bxvf0dF5Wo1xqjCQlYY-j-90DPw'"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -131,16 +131,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
-    "token = 'BQCrvSl2xcEuIcomgB0rj7l0hHpxUHrmYIKuwZ5hl5ZhjfBag63UZTn6zQU94jnVqwln74jYSj-W-NbEmdKjmUk4TdBEI5k9e3VXc821rjt5x8yxcy0d0BwN2Fvb5kTdr-WcJUh6L01xlKm98LM7phxOcJYlbw'"
+    "token = 'BQAHmweLxptaAB2jWC0fj2FateE-y98orcBbygQIdwZanpBAaIkk7niAouIV2WtAkmzlJAz3VXdB1HBv7mwiFe-eDxOus4WsmPFBbsPaDiCul6h3OxJURcWRk69QfyD34TXoKEruluj1M-cbl-2ato2CkGr3nQ'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 25,
    "metadata": {
     "jupyter": {
      "source_hidden": true
@@ -279,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -287,29 +287,168 @@
      "output_type": "stream",
      "text": [
       "retrieving user id and display name for current token\n",
-      "['5E5kHXR820ZE1Tv4NgcRpb', '3AAwJ043uT1wXSKDtGyuxF', '7lSNZV9U8D7BnzwTIM8zlG']\n",
-      "5\n",
-      "0\n",
-      "3AAwJ043uT1wXSKDtGyuxF\n",
-      "1\n",
-      "15VQzotNvOlrURjpzNfByJ\n",
-      "artist_id: 7Bx0qiG4t9Ewq8NyPDtxab\n",
-      "[]\n",
-      "2\n",
-      "2Pan3RlcjS43Yck4LrXBQ1\n",
-      "artist_id: 1xgCilwCIEuDwK6P1DzNKH\n",
-      "[]\n",
-      "3\n",
-      "7lSNZV9U8D7BnzwTIM8zlG\n",
-      "4\n",
-      "5E5kHXR820ZE1Tv4NgcRpb\n",
-      "the genre is: ['middle earth']\n",
+      "['3E940gpOthnGBcxuWkp8UY', '627k7rjvtLuo9nE4n2s3SI', '5nyHz4PQWvru7EUesNAt0O', '43ile6cBzr9uaC4bJf6J3N', '3seoFkiuUwCVrjnPpp4jRb', '7sqgV3wwdHFWCkaYNJkY7o', '5Jyb7sh76nwgmBqx5V1v51', '27r5zOoscJYQOkWpDmv4Pm', '5lZ5FU8kf7vyOlECQmtw4u', '6qK0apPspdUTGwUERX6kxb', '22t3vCXfjQhIiXzGVSZNOz', '6XLAJtcObiSdliKMO8uZAA', '3V1oeP60i7Er7QbwzQTYdO', '3WzGnwyAWuYzYXPJWCH4dL', '3wUMQpY40eJrnqIDsyfYfQ', '0XLjSQWYkZQOjyOcMe11cV', '1VqSNvqsOCfPmy7klz0i6f', '090a3fK6DnEKCECdfctvYy', '5zb7npjQqoJ7Kcpq4yD9qn', '3lLClwUDcHYsCInBKn57r4', '5udMby0ZOIAASL5qwFnUuM', '1WbwlYiiMZGQlrFGirRnHv', '340nQIqGeYYIdrWaUyeAOf', '7znZstuIvZjldNIO1E11U4', '72BLFDUJWvAEwvVf0JDIfO', '2nBtV4NSZJiarMBMpsn6UH', '7A1d0qBQL2IiDhrDrhUqE8', '3khnwbi2ZxydY4rlnK6FDU', '2JwfiG3QhMaj9BRpbIEyGN', '34nixLtq739l1cY1eGCSW0', '6vUA999IXXgLNPS8lQ89zF', '4yJDr9tJqnngXZ7cQl0g15', '4v9rHzCDgQXbDdB7t4Nwcz', '0FfxiP97Bj0tT5WcEiwmDo', '7yx9rpfQVdXD0674hX4Zl0', '2tA5dpjf7xzzkMXCOWikdk', '1tRjY29xhTYP6QJOO9v7lg', '1FDNASh3QfLrG2N7vNoBOw', '11HpNMd6I6cpi64Y36U3ju', '7Hr8doHwfnAsaeme57NNpX', '7mB5AgvBYc6QasgzTxrugB', '3vZGa55PU49qfgrZYgr0v8', '0WMgVB4OEm5JEj08lBtBgf', '0zmHKnEvizzz9AXFyBd3yK', '4oPq32lOh8Eg5kkdzt1VMp', '7DpYj9ZxQ9FTRhDdN18e2E', '1Qg7tAfpy2tuvJ4WSDv247', '0EJAJbxjHV4b4MAtD9fCB4', '2F1XmP93IwOwhBo5gOhwqt']\n",
+      "50\n",
+      "song number: 0\n",
+      "34nixLtq739l1cY1eGCSW0\n",
+      "not enough songs found\n",
+      "song number: 1\n",
+      "090a3fK6DnEKCECdfctvYy\n",
+      "not enough songs found\n",
+      "song number: 2\n",
+      "27r5zOoscJYQOkWpDmv4Pm\n",
+      "not enough songs found\n",
+      "song number: 3\n",
+      "2nBtV4NSZJiarMBMpsn6UH\n",
+      "not enough songs found\n",
+      "song number: 4\n",
+      "72BLFDUJWvAEwvVf0JDIfO\n",
+      "not enough songs found\n",
+      "song number: 5\n",
+      "340nQIqGeYYIdrWaUyeAOf\n",
+      "not enough songs found\n",
+      "song number: 6\n",
+      "3wUMQpY40eJrnqIDsyfYfQ\n",
+      "not enough songs found\n",
+      "song number: 7\n",
+      "4v9rHzCDgQXbDdB7t4Nwcz\n",
+      "not enough songs found\n",
+      "song number: 8\n",
+      "22t3vCXfjQhIiXzGVSZNOz\n",
+      "not enough songs found\n",
+      "song number: 9\n",
+      "5Jyb7sh76nwgmBqx5V1v51\n",
+      "not enough songs found\n",
+      "song number: 10\n",
+      "3seoFkiuUwCVrjnPpp4jRb\n",
+      "not enough songs found\n",
+      "song number: 11\n",
+      "7znZstuIvZjldNIO1E11U4\n",
+      "not enough songs found\n",
+      "song number: 12\n",
+      "0FfxiP97Bj0tT5WcEiwmDo\n",
+      "not enough songs found\n",
+      "song number: 13\n",
+      "627k7rjvtLuo9nE4n2s3SI\n",
+      "not enough songs found\n",
+      "song number: 14\n",
+      "43ile6cBzr9uaC4bJf6J3N\n",
+      "not enough songs found\n",
+      "song number: 15\n",
+      "2tA5dpjf7xzzkMXCOWikdk\n",
+      "not enough songs found\n",
+      "song number: 16\n",
+      "7mB5AgvBYc6QasgzTxrugB\n",
+      "not enough songs found\n",
+      "song number: 17\n",
+      "6XLAJtcObiSdliKMO8uZAA\n",
+      "not enough songs found\n",
+      "song number: 18\n",
+      "5zb7npjQqoJ7Kcpq4yD9qn\n",
+      "not enough songs found\n",
+      "song number: 19\n",
+      "1VqSNvqsOCfPmy7klz0i6f\n",
+      "not enough songs found\n",
+      "song number: 20\n",
+      "0EJAJbxjHV4b4MAtD9fCB4\n",
+      "not enough songs found\n",
+      "song number: 21\n",
+      "7sqgV3wwdHFWCkaYNJkY7o\n",
+      "not enough songs found\n",
+      "song number: 22\n",
+      "3khnwbi2ZxydY4rlnK6FDU\n",
+      "not enough songs found\n",
+      "song number: 23\n",
+      "4yJDr9tJqnngXZ7cQl0g15\n",
+      "not enough songs found\n",
+      "song number: 24\n",
+      "0dgkso7LCJ0oQRIOVEefO1\n",
+      "artist_id: 2ZDXyjvjJDtBUKahm32zoO\n",
+      "genre: []\n",
+      "song number: 25\n",
+      "2JwfiG3QhMaj9BRpbIEyGN\n",
+      "not enough songs found\n",
+      "song number: 26\n",
+      "7yx9rpfQVdXD0674hX4Zl0\n",
+      "not enough songs found\n",
+      "song number: 27\n",
+      "1WbwlYiiMZGQlrFGirRnHv\n",
+      "not enough songs found\n",
+      "song number: 28\n",
+      "4fvKMNF4VCvy1BB9YDyZCi\n",
+      "artist_id: 18UXMAe8MYg68DcC7qynaT\n",
+      "genre: []\n",
+      "song number: 29\n",
+      "7DpYj9ZxQ9FTRhDdN18e2E\n",
+      "not enough songs found\n",
+      "song number: 30\n",
+      "7Hr8doHwfnAsaeme57NNpX\n",
+      "not enough songs found\n",
+      "song number: 31\n",
+      "3lLClwUDcHYsCInBKn57r4\n",
+      "not enough songs found\n",
+      "song number: 32\n",
+      "0WMgVB4OEm5JEj08lBtBgf\n",
+      "not enough songs found\n",
+      "song number: 33\n",
+      "5udMby0ZOIAASL5qwFnUuM\n",
+      "not enough songs found\n",
+      "song number: 34\n",
+      "3vZGa55PU49qfgrZYgr0v8\n",
+      "not enough songs found\n",
+      "song number: 35\n",
+      "1Qg7tAfpy2tuvJ4WSDv247\n",
+      "not enough songs found\n",
+      "song number: 36\n",
+      "1FDNASh3QfLrG2N7vNoBOw\n",
+      "not enough songs found\n",
+      "song number: 37\n",
+      "11HpNMd6I6cpi64Y36U3ju\n",
+      "not enough songs found\n",
+      "song number: 38\n",
+      "2F1XmP93IwOwhBo5gOhwqt\n",
+      "not enough songs found\n",
+      "song number: 39\n",
+      "4oPq32lOh8Eg5kkdzt1VMp\n",
+      "not enough songs found\n",
+      "song number: 40\n",
+      "5lZ5FU8kf7vyOlECQmtw4u\n",
+      "not enough songs found\n",
+      "song number: 41\n",
+      "6qK0apPspdUTGwUERX6kxb\n",
+      "not enough songs found\n",
+      "song number: 42\n",
+      "1tRjY29xhTYP6QJOO9v7lg\n",
+      "not enough songs found\n",
+      "song number: 43\n",
+      "3V1oeP60i7Er7QbwzQTYdO\n",
+      "not enough songs found\n",
+      "song number: 44\n",
+      "0zmHKnEvizzz9AXFyBd3yK\n",
+      "not enough songs found\n",
+      "song number: 45\n",
+      "7A1d0qBQL2IiDhrDrhUqE8\n",
+      "not enough songs found\n",
+      "song number: 46\n",
+      "0XLjSQWYkZQOjyOcMe11cV\n",
+      "not enough songs found\n",
+      "song number: 47\n",
+      "6vUA999IXXgLNPS8lQ89zF\n",
+      "not enough songs found\n",
+      "song number: 48\n",
+      "3WzGnwyAWuYzYXPJWCH4dL\n",
+      "not enough songs found\n",
+      "song number: 49\n",
+      "5nyHz4PQWvru7EUesNAt0O\n",
+      "not enough songs found\n",
+      "3E940gpOthnGBcxuWkp8UY\n",
+      "the genre is: ['bass house', 'deep rai', 'jump up', 'uk dnb']\n",
       "Scaling data...\n",
       "Loading pickled model...\n",
       "results returned\n",
-      "['middle earth']\n",
+      "['bass house', 'deep rai', 'jump up', 'uk dnb']\n",
       "filter for genres initiated\n",
-      "80 stale tracks were removed for the user\n",
+      "394 stale tracks were removed for the user\n",
       "length of filtered list: 0\n",
       "need to add 20 items to final song output\n",
       "filtered list with 20 unique song indices returned\n",
