--- a/model_validation/Model_Validation.ipynb
+++ b/model_validation/Model_Validation.ipynb
@@ -363,9 +363,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "model_validation",
+   "display_name": "Python 3.8.1 64-bit ('sound_drip': conda)",
    "language": "python",
-   "name": "model_validation"
+   "name": "python38164bitsounddripcondaa88c6a5ea4794892a06f49613f47c5a4"
   },
   "language_info": {
    "codemirror_mode": {
@@ -377,7 +377,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.8.1"
   }
  },
  "nbformat": 4,
